<resources>
    <string name="app_name">My Application</string>
    <string name="android_icon">android_icon</string>>
    <string name="hello_world">
        Hally Hally Hally Hally Hally Hally Hally Hally \n
        Hally Hally Hally Hally Hally Hally Hally Hally \n
        Hally Hally Hally Hally Hally Hally Hally Hally \n
        Hally Hally Hally Hally Hally Hally Hally Hally \n
        Hally Hally Hally Hally Hally Hally Hally Hally \n
        Hally Hally Hally Hally Hally Hally Hally Hally \n
        Hally Hally Hally Hally Hally Hally Hally Hally \n
        Hally Hally Hally Hally Hally Hally Hally Hally \n
        Hally Hally Hally Hally Hally Hally Hally Hally \n
        Hally Hally Hally Hally Hally "
    </string>
    <string name="EditText1">請輸入使用者名稱</string>
    <string name="EditText2">請輸入密碼</string>
    <string name="Button1">登入</string>
    <string name="Button2">註冊</string>
    <string name="item_text">清單項目文字</string>
    <string name="item_text_cal">計算機</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Button11">1</string>
    <string name="Button12">2</string>
    <string name="Button3">3</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="Button0">0</string>
    <string name="Button.add">+</string>
    <string name="Button.reduce">-</string>
    <string name="Button.decimal_point">.</string>
    <string name="Button.remove">÷</string>
    <string name="Button.take">x</string>
    <string name="Button.equal">=</string>
    <string name="checkbox">記住帳號</string>
    <string name="Button.clear">清除</string>

</resources>