<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline_top2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/Button7"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button2"
        />
    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/constraint"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@id/button3"
        android:text="@string/Button8" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/Button9"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/button4"
            app:layout_constraintStart_toEndOf="@id/button2"
            app:layout_constraintTop_toTopOf="@id/constraint" />
    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@id/constraint"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/Button.remove" />
    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:text="@string/Button4"
        app:layout_constraintTop_toBottomOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintEnd_toStartOf="@id/button7"
        android:text="@string/Button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintEnd_toStartOf="@id/button8"
        android:text="@string/Button6" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/Button.take"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/button7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />
    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:text="@string/Button11"
        app:layout_constraintTop_toBottomOf="@id/button5"
        app:layout_constraintEnd_toStartOf="@id/button10"
        app:layout_constraintStart_toStartOf="parent"
        />
    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/button6"
        app:layout_constraintEnd_toStartOf="@id/button11"
        app:layout_constraintStart_toEndOf="@id/button9"
        android:text="@string/Button12" />

    <Button
        android:id="@+id/button11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/button12"
        app:layout_constraintStart_toEndOf="@id/button10"
        android:text="@string/Button3" />
    <Button
        android:id="@+id/button12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/button8"
        app:layout_constraintStart_toEndOf="@id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/Button.reduce" />

    <Button
        android:id="@+id/button13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:text="@string/Button0"
        app:layout_constraintTop_toBottomOf="@id/button9"
        app:layout_constraintEnd_toStartOf="@id/button14"
        app:layout_constraintStart_toStartOf="parent"

        />
    <Button
        android:id="@+id/button14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/button10"
        app:layout_constraintEnd_toStartOf="@id/button15"
        app:layout_constraintStart_toEndOf="@id/button13"
        android:text="@string/Button.clear" />

    <Button
        android:id="@+id/button15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/button11"
        app:layout_constraintEnd_toStartOf="@id/button16"
        app:layout_constraintStart_toEndOf="@id/button14"
        android:text="@string/Button.equal" />

    <Button
        android:id="@+id/button16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/button12"
        app:layout_constraintStart_toEndOf="@id/button15"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/Button.add" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>